--- a/templates/survey/index.html
+++ b/templates/survey/index.html
@@ -7,6 +7,7 @@
     {% block content %}
         <div style="color: red; size: 24px">
             Content here !!!!!!!!
+            <a class="button" href="{% url 'survey:answers' 4 %}">Пройти опрос</a>
         </div>
             {% for question in questions %}
                 {% include 'includes/question.html'}
